--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,5 +1,5 @@
 $dark-purple: #732487;
-$medium-purple: #CAB8E0;
+$medium-purple: #DDc9f0;
 $light-blue: #ff0;
 $pale-blue: #DEE5EF;
 
@@ -8,7 +8,7 @@ $pale-skyblue: #d6e6fc;
 $red: #8F152C;
 
 $dark-grey: #414141; // TODO: unused?
-$medium-grey: #6E6F71; // TODO: unused?
+$medium-grey: #676767; // TODO: unused?
 $light-grey: #939598;
 $pale-grey: #F1F1F1;
 
