--- a/app/assets/stylesheets/locals/series-index.css.scss
+++ b/app/assets/stylesheets/locals/series-index.css.scss
@@ -4,7 +4,7 @@
         background: $medium-purple;
         font-size: 24px;
         font-weight: $bold;
-        color: $skyblue;
+        color: $dark-purple;
         a { 
             font-weight: $medium;
             color: #FFF;
