--- a/app/assets/stylesheets/locals/series-index.css.scss
+++ b/app/assets/stylesheets/locals/series-index.css.scss
@@ -7,7 +7,7 @@
         color: $skyblue;
         a { 
             font-weight: $medium;
-            color: #FFF;
+            color: #000;
         }
     }
     ul {
