--- a/app/assets/stylesheets/locals/series-index.css.scss
+++ b/app/assets/stylesheets/locals/series-index.css.scss
@@ -1,13 +1,13 @@
 .blacklight-series-index {
     .letters {
         padding: 0.75 * $grid-gutter-width 1.5 * $grid-gutter-width;
-        background: $medium-purple;
+        background: $ad41d9;
         font-size: 24px;
         font-weight: $bold;
         color: $skyblue;
         a { 
             font-weight: $medium;
-            color: #000;
+            color: #fff;
         }
     }
     ul {
