--- a/app/assets/stylesheets/locals/series-index.css.scss
+++ b/app/assets/stylesheets/locals/series-index.css.scss
@@ -1,7 +1,7 @@
 .blacklight-series-index {
     .letters {
         padding: 0.75 * $grid-gutter-width 1.5 * $grid-gutter-width;
-        background: $ad41d9;
+        background: $medium-purple;
         font-size: 24px;
         font-weight: $bold;
         color: $skyblue;
