--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -16,7 +16,7 @@
     }
     @media (min-width: $screen-md-min) {
         #sidebar {
-            background: $medium-purple;
+            background: $pale-grey;
             .facet-content .panel-body {
                 position: absolute; // So the div doesn't expand when the menu drops.
             }
