--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -7,8 +7,8 @@
         .info {
            background: $dark-purple;
            &:hover {
-            background: $pale-grey;
-            color: $dark-purple;
+            background: $medium-purple;
+            color: #fff;
            }
            color: #fff;
            padding: $grid-gutter-width*0.5 $grid-gutter-width*0.75;
