--- a/app/assets/stylesheets/locals/plain.css.scss
+++ b/app/assets/stylesheets/locals/plain.css.scss
@@ -20,8 +20,8 @@
         .play-from-here::before {
             content: '\25B6'; // right-pointing triangle
             cursor: pointer;
-            background: $pale-grey;
-            color: $dark-purple;
+            background: $medium-purple;
+            color: #fff;
             padding: 0 4px;
             border-radius: 3px;
             margin-right: 4px;
