--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -57,8 +57,8 @@
             font-size: 36px;
             background: $dark-purple;
             &:hover {
-                background: $pale-grey;
-                color: $dark-purple;
+                background: $medium-purple;
+                color: #fff;
             }
             @media (min-width: $screen-lg-min) {
                 padding: 1em 0em; // No side padding, so none line wrap...
