'skyblue hover on facet values'

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -74,7 +74,8 @@
                                 display: block;
                                 padding: $grid-gutter-width/8 $grid-gutter-width/2; // To match menu header
                                 &:hover {
-                                    background: $light-blue;
+                                    background: $skyblue;
+                                    color: #fff;
                                 }
                             }
 
