--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -19,9 +19,7 @@
 
   <% if @pbcore.this_isnt_all? %>
     <p>
-      More material may be available from this program at the GBH Archives.
-      If you are a researcher interested in accessing the collection at GBH,
-      please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
+      More material may be available from this program at the GBH Archives. If you would like research access to the collection at GBH, please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
   <% end %>
 
