--- a/app/views/catalog/player/_player_right.html.erb
+++ b/app/views/catalog/player/_player_right.html.erb
@@ -11,17 +11,15 @@
     <% end %>
   <% end %>
 
-  <% if @pbcore.this_isnt_all? %>
+  <% if !@pbcore.digitized? %>
     <p>
-      More material may be available from this program at the GBH Archives.
-      If you are a researcher interested in accessing the collection at GBH,
-      please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
+      This program cannot be made available on Open Vault.
     </p>
   <% end %>
 
-  <% if !@pbcore.digitized? %>
+  <% if @pbcore.this_isnt_all? %>
     <p>
-      This program has not been digitized yet or cannot be made available on Open Vault.
+      More material may be available from this program at the GBH Archives. If you would like research access to the collection at GBH, please email <a href="mailto:archive_requests@wgbh.org">archive_requests@wgbh.org</a>.
     </p>
   <% end %>
 
