Changes name of credits page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,7 +14,7 @@
         <p><%= link_to('Contact Us', '/contact-us') %></p>
         <p><%= link_to('Support Open Vault', '/support-open-vault') %></p>
         <p><%= link_to('Help', '/help') %></p>
-        <p><%= link_to('Credits', '/credits') %></p>
+        <p><%= link_to('Funders and Credits', '/credits') %></p>
         <p><%= link_to('Media Production Organizational Tools', '/media-production-organizational-tools') %></p>
         <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
         <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
